src/objects/DMAPP__DM_Opportunity_Extra__c/DMAPP__DM_Opportunity_Extra__c.object-meta.xml
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing Dealmaker attributes relating to an Opportunity. There should be exactly one of these for each Opportunity in the system.</description>
    <label>Dealmaker Opportunity</label>
    <nameField>
        <label>Dealmaker Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>