src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__FSM2__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__FSM2__c</fullName>
    <inlineHelpText>PROBLEMS: Are the business problems validated? Have you confirmed unique value?</inlineHelpText>
    <label>PlanSignal Problems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
                <default>true</default>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>