src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMAPP__MAN1LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__MAN1LastUpdated__c</fullName>
    <label>Mgmt KeyDeal Last Updated</label>
    <type>DateTime</type>
</CustomField>