src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMMAX__COM_StrategyAll__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__COM_StrategyAll__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes if you have identified the likely competitive strategy for each of the competitors in the Opportunity.</inlineHelpText>
    <label>Strategy All Competitors</label>
    <type>Checkbox</type>
</CustomField>