src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMMAX__Days_since_last_Test_Improve__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Days_since_last_Test_Improve__c</fullName>
    <inlineHelpText>The number of days since the most recent completed T&amp;I.</inlineHelpText>
    <label>DEPRECATED Days since Test &amp; Improve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>