src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMMAX__TAS18__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__TAS18__c</fullName>
    <inlineHelpText>Yes: Profitability is equal to or greater than the average profit on an opportunity for your business.</inlineHelpText>
    <label>TAS18 - Profitability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>