src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMMAX__TAS20__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__TAS20__c</fullName>
    <inlineHelpText>Yes: This customer will have a greater-than-normal positive strategic impact on the company.</inlineHelpText>
    <label>TAS20 - Strategic Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>