src/objects/DMAPP__DM_Opportunity_Extra__c/fields/DMMAX__Tasks_P__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Tasks_P__c</fullName>
    <inlineHelpText>Number open &quot;Prove your value&quot; tasks</inlineHelpText>
    <label>Tasks P</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>